summative.moria.Moria.scala.code
while(estFaceMur() == false) {  
  do {
		setDirection(EAST)    
    avance()
  }while (estSurBiscuit() == false)
}